# bio

./: .gitmodules  CMakeLists.txt  watch.sh
.github/workflows/: test.yml
answers/: 1-2-frequentwords  1-2-patterncount  1-3-exercise-break  1-3-patternmatching  1-3-reversecomplement
input/: wk1-frequentwords  wk1-patternmatching  wk1-reversecomplement
src/: 1-3-exercise-break.cpp  1-3-reversecomplement.cpp  basename.cpp  complement.cpp  join.cpp  wk1-frequentwords.cpp  wk1-patterncount.cpp  wk1-patternmatching.cpp
